--- a/src/ci/ci_docker_compose.yml
+++ b/src/ci/ci_docker_compose.yml
@@ -48,10 +48,10 @@ services:
       depends_on:
         - ci-db
 
-    ci-secret:
+    ci-secret-plugin:
       image: drone/vault
-      container_name: ci-secret
-      hostname: ci-secret
+      container_name: ci-secret-plugin
+      hostname: ci-secret-plugin
       restart: always
       environment:
         - DRONE_SECRET=${DRONE_SECRET}
@@ -76,7 +76,7 @@ services:
         - DRONE_RPC_SERVER=http://ci:80
         - DRONE_RPC_SECRET=${DRONE_RPC_SECRET}
         - DRONE_RUNNER_CAPACITY=${DRONE_RUNNER_CAPACITY}
-        - DRONE_SECRET_ENDPOINT=http://ci-secret:3000
+        - DRONE_SECRET_ENDPOINT=http://ci-secret-plugin:3000
         - DRONE_SECRET_SECRET=${DRONE_SECRET}
       networks:
         - ci-network
@@ -84,7 +84,7 @@ services:
         - /var/run/docker.sock:/var/run/docker.sock
       depends_on:
         - ci
-        - ci-secret
+        - ci-secret-plugin
 
 
 networks:
