--- a/src/git/git_docker_compose.yml
+++ b/src/git/git_docker_compose.yml
@@ -1,5 +1,5 @@
-version: "3.5"
 
+version: "3.5"
 
 services:
 
@@ -18,7 +18,7 @@ services:
         - git-network
       volumes:
         - git-db-data:/var/lib/postgresql/data
-          
+
     git:
       image: gogs/gogs:latest
       container_name: git
@@ -30,18 +30,29 @@ services:
         - git-data:/data
       networks:
         - git-network
+        - proxy-network
       ports:
         - ${GOGS_SSH_PORT}:22
         - ${GOGS_HTTP_PORT}:3000
       depends_on:
         - git-db
-
+      labels:
+        - "traefik.enable=true"
+        - "traefik.docker.network=proxy-network"
+        - "traefik.http.routers.git.service=git"
+        - "traefik.http.routers.git.rule=Host(`git.${YOUR_DOMAIN}`)"
+        - "traefik.http.routers.git.entrypoints=websecure"
+        - "traefik.http.routers.git.tls.certresolver=myresolver"
+        - "traefik.http.services.git.loadbalancer.server.port=3000"
 
 networks:
 
     git-network:
       name: git-network
       driver: bridge
+
+    proxy-network:
+      external: true
 
 
 volumes:
