--- a/src/packages/packages_docker_compose.yml
+++ b/src/packages/packages_docker_compose.yml
@@ -33,12 +33,25 @@ services:
       ports:
         - ${PROGET_HTTP_PORT}:80
       networks:
+        - proxy-network
         - packages-network
       depends_on:
         - packages-db
+      labels:
+        - "traefik.enable=true"
+        - "traefik.docker.network=proxy-network"
+        - "traefik.http.routers.packages.service=packages"
+        - "traefik.http.routers.packages.rule=Host(`packages.${YOUR_DOMAIN}`)"
+        - "traefik.http.routers.packages.entrypoints=websecure"
+        - "traefik.http.routers.packages.tls.certresolver=myresolver"
+        - "traefik.http.services.packages.loadbalancer.server.port=80"
 
 
 networks:
+
+   proxy-network:
+      external: true
+      
   packages-network:
     name: packages-network
     driver: bridge
