added explicit image versions to docker-compose scripts.

--- a/src/git/git_docker_compose.yml
+++ b/src/git/git_docker_compose.yml
@@ -20,7 +20,7 @@ services:
         - git-db-data:/var/lib/postgresql/data
           
     git:
-      image: gogs/gogs:latest
+      image: gogs/gogs:0.11.91
       container_name: git
       hostname: git
       restart: always
