--- a/src/vault/vault-docker-compose.yml
+++ b/src/vault/vault-docker-compose.yml
@@ -4,7 +4,7 @@ version: "3.5"
 services:
 
   vault-db:
-    image: consul:latest
+    image: consul:1.7
     container_name: vault-db
     hostname: vault-db
     restart: always
@@ -18,7 +18,7 @@ services:
     command: agent -server -bind 0.0.0.0 -client 0.0.0.0 -bootstrap-expect 1
   
   vault:
-    image: vault:latest
+    image: vault:1.3.4
     container_name: vault
     hostname: vault
     restart: always
