added documentation for pushing a nuget package to a private repository

--- a/src/ci/ci.build.sample/.drone.yml
+++ b/src/ci/ci.build.sample/.drone.yml
@@ -71,14 +71,14 @@ volumes:
 kind: secret
 name: registry_password
 get:
-  path: secrets/data/ci.docker
+  path: secrets/data/ci.registry
   name: registry_password
 
 ---
 kind: secret
 name: registry_username
 get:
-  path: secrets/data/ci.docker
+  path: secrets/data/ci.registry
   name: registry_username
 
 ---
