--- a/src/registry/registry_docker_compose.yml
+++ b/src/registry/registry_docker_compose.yml
@@ -14,7 +14,16 @@ services:
       - registry-data:/var/lib/registry
       - registry-config:/etc/docker/registry
     networks:
+      - proxy-network
       - registry-network
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=proxy-network"
+      - "traefik.http.routers.registry.service=registry"
+      - "traefik.http.routers.registry.rule=Host(`registry.${YOUR_DOMAIN}`)"
+      - "traefik.http.routers.registry.entrypoints=websecure"
+      - "traefik.http.routers.registry.tls.certresolver=myresolver"
+      - "traefik.http.services.registry.loadbalancer.server.port=5000"
 
   registry-ui:
     image: joxit/docker-registry-ui:static
@@ -35,20 +44,20 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy-network"
-      - "traefik.http.routers.registry.service=registry"
-      - "traefik.http.routers.registry.rule=Host(`registry.${YOUR_DOMAIN}`)"
-      - "traefik.http.routers.registry.entrypoints=websecure"
-      - "traefik.http.routers.registry.tls.certresolver=myresolver"
-      - "traefik.http.services.registry.loadbalancer.server.port=80"
+      - "traefik.http.routers.registry-ui.service=registry-ui"
+      - "traefik.http.routers.registry-ui.rule=Host(`registryui.${YOUR_DOMAIN}`)"
+      - "traefik.http.routers.registry-ui.entrypoints=websecure"
+      - "traefik.http.routers.registry-ui.tls.certresolver=myresolver"
+      - "traefik.http.services.registry-ui.loadbalancer.server.port=80"
 
 networks:
 
    proxy-network:
       external: true
-      
-  registry-network:
-    name: registry-network
-    driver: bridge
+
+   registry-network:
+      name: registry-network
+      driver: bridge
 
 volumes:
 
