--- a/src/ci/ci.build.sample/src/ci.build.sample/ci.build.sample.fsproj
+++ b/src/ci/ci.build.sample/src/ci.build.sample/ci.build.sample.fsproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.6" />
     <PackageReference Include="Giraffe" Version="3.6.0" />
+    <PackageReference Include="package.sample" Version="1.0.0" />
     <PackageReference Include="TaskBuilder.fs" Version="2.1.0" />
   </ItemGroup>
 
