added package source support for the build pipeline

--- a/src/ci/ci.build.sample/Dockerfile
+++ b/src/ci/ci.build.sample/Dockerfile
@@ -7,13 +7,19 @@
 # 3. Pull the endpoint
 # sudo curl http://localhost:9880/api/hello
 
-FROM mcr.microsoft.com/dotnet/core/sdk:2.2-alpine AS build
+
+ARG PACKAGES_SOURCE
+ARG PACKAGES_USERNAME
+ARG PACKAGES_PASSWORD
+
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS build
 WORKDIR /build
 
 COPY tests/. ./tests/
 COPY src/. ./src/
 
 # build
+RUN dotnet nuget add source $PACKAGES_SOURCE --name (awk -F/ '{print $3}' <<< $PACKAGES_SOURCE) --username $PACKAGES_USERNAME --password $PACKAGES_PASSWORD
 RUN dotnet build ./src/**/*.fsproj --verbosity normal --configuration Release
 RUN dotnet build ./tests/**/*.fsproj --verbosity normal --configuration Release
 
@@ -24,7 +30,7 @@ RUN dotnet test ./tests/**/*.fsproj --no-build --no-restore --verbosity normal -
 RUN dotnet publish ./src/ci.build.sample/ci.build.sample.fsproj --no-build --no-restore --verbosity normal --configuration Release --output /build/release
 
 # containerize
-FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-alpine AS runtime
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine AS runtime
 WORKDIR /app
 COPY --from=build /build/release ./
 ENTRYPOINT ["dotnet", "ci.build.sample.dll"]
