Updating proxy docker setup, env and compose to include secrets file

--- a/src/ci/ci_docker_compose.yml
+++ b/src/ci/ci_docker_compose.yml
@@ -41,6 +41,7 @@ services:
       ports:
         - ${DRONE_HTTP_PORT}:80
       networks:
+        - proxy-network
         - ci-network
       volumes:
         - /var/run/docker.sock:/var/run/docker.sock
