--- a/src/vault/vault_docker_compose.yml
+++ b/src/vault/vault_docker_compose.yml
@@ -46,7 +46,7 @@ services:
       - "traefik.http.routers.vault.service=vault"
       - "traefik.http.routers.vault.rule=Host(`vault.${YOUR_DOMAIN}`)"
       - "traefik.http.routers.vault.entrypoints=websecure"
-      - "traefik.http.routers.vault.tls.certresolver=myresolver"
+      - "traefik.http.routers.vault.tls.certresolver=proxyresolver"
       - "traefik.http.services.vault.loadbalancer.server.port=8200"
 
 
