--- a/src/proxy/proxy_docker_compose.yml
+++ b/src/proxy/proxy_docker_compose.yml
@@ -8,17 +8,17 @@ services:
     command:
       # Uncomment two commands below for debugging information inside the proxy container logs(docker logs proxy):
       #- "--log.level=DEBUG"
-      #- "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
+      #- "--certificatesresolvers.proxyresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
       - "--entrypoints.websecure.address=:443"
-      - "--certificatesresolvers.myresolver.acme.dnschallenge=true"
-      - "--certificatesresolvers.myresolver.acme.dnschallenge.provider=cloudflare"
-      - "--certificatesresolvers.myresolver.acme.email=${LETSENCRYPT_EMAIL}"
-      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+      - "--certificatesresolvers.proxyresolver.acme.dnschallenge=true"
+      - "--certificatesresolvers.proxyresolver.acme.dnschallenge.provider=cloudflare"
+      - "--certificatesresolvers.proxyresolver.acme.email=${LETSENCRYPT_EMAIL}"
+      - "--certificatesresolvers.proxyresolver.acme.storage=/letsencrypt/acme.json"
 
     networks:
       - proxy-network
@@ -39,7 +39,7 @@ services:
       - "traefik.http.routers.traefik_dashboard.service=traefik_dashboard"
       - "traefik.http.routers.traefik_dashboard.rule=Host(`proxy.${YOUR_DOMAIN}`)"
       - "traefik.http.routers.traefik_dashboard.entrypoints=websecure"
-      - "traefik.http.routers.traefik_dashboard.tls.certresolver=myresolver"
+      - "traefik.http.routers.traefik_dashboard.tls.certresolver=proxyresolver"
       - "traefik.http.services.traefik_dashboard.loadbalancer.server.port=8080"
       - "traefik.http.middlewares.traefik_dashboard_auth.basicauth.usersfile=/etc/traefik/conf/htpasswd"
       - "traefik.http.routers.traefik_dashboard.middlewares=traefik_dashboard_auth@docker"
