--- a/src/registry/registry_docker_compose.yml
+++ b/src/registry/registry_docker_compose.yml
@@ -22,7 +22,7 @@ services:
       - "traefik.http.routers.registry.service=registry"
       - "traefik.http.routers.registry.rule=Host(`registry.${YOUR_DOMAIN}`)"
       - "traefik.http.routers.registry.entrypoints=websecure"
-      - "traefik.http.routers.registry.tls.certresolver=myresolver"
+      - "traefik.http.routers.registry.tls.certresolver=proxyresolver"
       - "traefik.http.services.registry.loadbalancer.server.port=5000"
 
   registry-ui:
@@ -47,7 +47,7 @@ services:
       - "traefik.http.routers.registry-ui.service=registry-ui"
       - "traefik.http.routers.registry-ui.rule=Host(`registryui.${YOUR_DOMAIN}`)"
       - "traefik.http.routers.registry-ui.entrypoints=websecure"
-      - "traefik.http.routers.registry-ui.tls.certresolver=myresolver"
+      - "traefik.http.routers.registry-ui.tls.certresolver=proxyresolver"
       - "traefik.http.services.registry-ui.loadbalancer.server.port=80"
 
 networks:
