added mount that was deleted from vault_docker_compose.yml

--- a/src/vault/vault_docker_compose.yml
+++ b/src/vault/vault_docker_compose.yml
@@ -79,3 +79,9 @@ volumes:
         type: none
         device: ${VAULT_CONSUL_CONFIG}
         o: bind
+        
+    vault-db-data:	
+      driver_opts:	
+        type: none	
+        device: ${VAULT_CONSUL_DATA}	
+        o: bind 	
