Add traefik clean (#10)
* Added script for setting up taiga. need to uncomment when the rest of the script when working.

* Directly mounting volumes in order to get it to work properly for now.

* - Added setup for taiga to setup_containers file.
- Corrected variable name in setup_virtual_hosts.sh
- added env.tmpl and a docker compose file for Taiga

* Updated readme.

* wip

* wip

# Conflicts:
#	src/project/project_docker_compose.yml

* Correcting variable names to match the rest of the setup

* use the correct variable for the .evn file path

* corrected postgresql port mapping for taiga;

* taiga postgresql parameters mapping

* corrected project port variable name

* fix vhosts generating script

* set the correct port prefix for the project container

* Reworking the main readme.

* minor changes

* correct the suggestion to skip

* wip

* corrected subsection title formatting

* Updated the readme file for taiga(Project).

* wip

* wip

* emoji test

* created outline

* outline wip

* Reworked the main readme.

* miror chnages in DNS api setup

* formatting

* fix  Let’s Encrypt spelling

* wip

* Description - wip

* working on the foreword

* wip

* grammatical mistake

* added new sections to the main readme

* completed the Q/A section.

* completed the Q/A section.

* changed formatting for notes and completed TL;DR

* changed the entries order in TL;DR

* Monir chnages and pharaprasing.

* minor correction

* reading through setups wip

* Small corrections in the setup_containers script and Readme file.

* corrected TAIGA_POSTGRES_PASSWORD to TAIGA_POSTGRESQL_PASSWORD
and TAIGA_POSTGRES_USER to TAIGA_POSTGRESQL_USER

* Updated port number for the postgressql documentation

* Reviewed and edited the Proget tutorial

* drone readme wip

* Changed `Registry` to `packages` in the proget documentation.

* drone wip

* chnage proget configuration order.



--- a/src/ci/ci_docker_compose.yml
+++ b/src/ci/ci_docker_compose.yml
@@ -41,12 +41,22 @@ services:
       ports:
         - ${DRONE_HTTP_PORT}:80
       networks:
+        - proxy-network
         - ci-network
       volumes:
         - /var/run/docker.sock:/var/run/docker.sock
         - ci-data:/data
       depends_on:
+        - proxy-network
         - ci-db
+      labels:
+        - "traefik.enable=true"
+        - "traefik.docker.network=proxy-network"
+        - "traefik.http.routers.ci.service=ci"
+        - "traefik.http.routers.ci.rule=Host(`ci.${YOUR_DOMAIN}`)"
+        - "traefik.http.routers.ci.entrypoints=websecure"
+        - "traefik.http.routers.ci.tls.certresolver=proxyresolver"
+        - "traefik.http.services.ci.loadbalancer.server.port=80"
 
     ci-secret-plugin:
       image: drone/vault
@@ -88,9 +98,13 @@ services:
 
 
 networks:
+
     ci-network:
       name: ci-network
       driver: bridge
+
+    proxy-network:
+      external: true
 
 
 volumes:
