--- a/src/packages/packages_docker_compose.yml
+++ b/src/packages/packages_docker_compose.yml
@@ -33,15 +33,28 @@ services:
       ports:
         - ${PROGET_HTTP_PORT}:80
       networks:
+        - proxy-network
         - packages-network
       depends_on:
         - packages-db
+      labels:
+        - "traefik.enable=true"
+        - "traefik.docker.network=proxy-network"
+        - "traefik.http.routers.packages.service=packages"
+        - "traefik.http.routers.packages.rule=Host(`packages.${YOUR_DOMAIN}`)"
+        - "traefik.http.routers.packages.entrypoints=websecure"
+        - "traefik.http.routers.packages.tls.certresolver=proxyresolver"
+        - "traefik.http.services.packages.loadbalancer.server.port=80"
 
 
 networks:
-  packages-network:
-    name: packages-network
-    driver: bridge
+
+   packages-network:
+      name: packages-network
+      driver: bridge
+
+   proxy-network:
+      external: true
 
 
 volumes:
