minor corrections to compose files

--- a/src/packages/packages_docker_compose.yml
+++ b/src/packages/packages_docker_compose.yml
@@ -14,6 +14,7 @@ services:
         - POSTGRES_DB=${PROGET_POSTGRESQL_DATABASE}
         - POSTGRES_USER=${PROGET_POSTGRESQL_USER}
         - POSTGRES_PASSWORD=${PROGET_POSTGRESQL_PASSWORD}
+      command: ["-c", "shared_buffers=256MB", "-c", "max_connections=200"]
       ports:
         - ${PROGET_POSTGRESQL_PORT}:5432
       networks: 
@@ -25,7 +26,7 @@ services:
       hostname: packages
       restart: always
       environment:
-        - PROGET_DATABASE=Host=packages-db; Database=${PROGET_POSTGRESQL_DATABASE}; Username=${PROGET_POSTGRESQL_USER}; Password=${PROGET_POSTGRESQL_PASSWORD};
+        - PROGET_DATABASE=Host=packages-db; Database=${PROGET_POSTGRESQL_DATABASE}; Username=${PROGET_POSTGRESQL_USER}; Password=${PROGET_POSTGRESQL_PASSWORD}; MinPoolSize=1;MaxPoolSize=20;
       volumes:
         - packages-packages:/var/proget/packages
         - packages-extensions:/var/proget/extensions
