--- a/src/project/project_docker_compose.yml
+++ b/src/project/project_docker_compose.yml
@@ -2,6 +2,63 @@ version: '3.5'
 
 services:
 
+  project-db:
+    image: postgres:11-alpine
+    container_name: project-db
+    hostname: project-db
+    restart: unless-stopped
+    networks:
+      - project-network
+    ports:
+    - ${TAIGA_POSTGRESQL_PORT}:5432
+    volumes:
+      - project-posgresql-db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_HOST=project-db
+      - POSTGRES_DB=${TAIGA_POSTGRESQL_DB}
+      - POSTGRES_USER=${TAIGA_POSTGRESQL_USER}
+      - POSTGRES_PASSWORD=${TAIGA_POSTGRESQL_PASSWORD}
+
+  project-cache:
+    image: redis:5.0.9-alpine
+    container_name: project-cache
+    hostname: project-cache
+    restart: unless-stopped
+    command: ["--requirepass", "${TAIGA_REDIS_PASSWORD}"]
+    networks:
+      - project-network
+    networks:
+      - project-network
+
+  project-messaging:
+    image: dockertaiga/rabbit
+    container_name: project-messaging
+    hostname: project-messaging
+    restart: unless-stopped
+    networks:
+      - project-network
+    environment:
+      - RABBIT_HOST=project-messaging
+      - RABBIT_USER=${TAIGA_RABBIT_USER}
+      - RABBIT_PASSWORD=${TAIGA_RABBIT_PASSWORD}
+      - RABBIT_VHOST=project
+
+  project-events:
+    image: dockertaiga/events
+    container_name: project-events
+    hostname: project-events
+    restart: unless-stopped
+    depends_on:
+      - project-messaging
+    networks:
+      - project-network
+    environment:
+      - RABBIT_HOST=project-messaging
+      - RABBIT_USER=${TAIGA_RABBIT_USER}
+      - RABBIT_PASSWORD=${TAIGA_RABBIT_PASSWORD}
+      - TAIGA_SECRET=${TAIGA_SECRET}
+      - RABBIT_VHOST=project
+
   project-backend:
     image: dockertaiga/back
     container_name: project-backend
@@ -9,6 +66,7 @@ services:
     restart: unless-stopped
     depends_on:
       - project-db
+      - project-cache
       - project-events
     networks:
       - project-network
@@ -27,7 +85,9 @@ services:
       - RABBIT_HOST=project-messaging
       - RABBIT_USER=${TAIGA_RABBIT_USER}
       - RABBIT_PASSWORD=${TAIGA_RABBIT_PASSWORD}
-      - RABBIT_VHOST=${TAIGA_RABBIT_VHOST}
+      - RABBIT_VHOST=project
+      - REDIS_HOST=project-cach
+      - REDIS_PASSWORD=${TAIGA_REDIS_PASSWORD}
       - STARTUP_TIMEOUT=${TAIGA_STARTUP_TIMEOUT}
 
   project-frontend:
@@ -35,6 +95,8 @@ services:
     container_name: project-frontend
     hostname: project-frontend
     restart: unless-stopped
+    depends_on:
+      - project-backend
     networks:
       - project-network
     volumes:
@@ -42,58 +104,6 @@ services:
     environment:
       - TAIGA_HOST=${TAIGA_HOST}
       - TAIGA_SCHEME=${TAIGA_SCHEME}
-
-  project-db:
-    image: postgres:11-alpine
-    container_name: project-db
-    hostname: project-db
-    restart: unless-stopped
-    networks:
-      - project-network
-    ports:
-    - ${TAIGA_POSTGRESQL_PORT}:5432
-    volumes:
-      - project-posgresql-db:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_HOST=project-db
-      - POSTGRES_DB=${TAIGA_POSTGRESQL_DB}
-      - POSTGRES_USER=${TAIGA_POSTGRESQL_USER}
-      - POSTGRES_PASSWORD=${TAIGA_POSTGRESQL_PASSWORD}
-      - RABBIT_HOST=project-messaging
-      - RABBIT_USER=${TAIGA_RABBIT_USER}
-      - RABBIT_PASSWORD=${TAIGA_RABBIT_PASSWORD}
-      - RABBIT_VHOST=${TAIGA_RABBIT_VHOST}
-      - STARTUP_TIMEOUT=${TAIGA_STARTUP_TIMEOUT}
-
-  project-messaging:
-    image: dockertaiga/rabbit
-    container_name: project-messaging
-    hostname: project-messaging
-    restart: unless-stopped
-    networks:
-      - project-network
-    environment:
-      - RABBIT_HOST=project-messaging
-      - RABBIT_USER=${TAIGA_RABBIT_USER}
-      - RABBIT_PASSWORD=${TAIGA_RABBIT_PASSWORD}
-      - RABBIT_VHOST=${TAIGA_RABBIT_VHOST}
-      - STARTUP_TIMEOUT=${TAIGA_STARTUP_TIMEOUT}
-
-  project-events:
-    image: dockertaiga/events
-    container_name: project-events
-    hostname: project-events
-    restart: unless-stopped
-    depends_on:
-      - project-messaging
-    networks:
-      - project-network
-    environment:
-      - RABBIT_HOST=project-messaging
-      - RABBIT_USER=${TAIGA_RABBIT_USER}
-      - RABBIT_PASSWORD=${TAIGA_RABBIT_PASSWORD}
-      - RABBIT_VHOST=${TAIGA_RABBIT_VHOST}
-      - TAIGA_SECRET=${TAIGA_SECRET}
 
   project-proxy:
     image: dockertaiga/proxy
@@ -106,6 +116,7 @@ services:
       - project-events
     networks:
       - project-network
+      - proxy-network
     ports:
       - ${TAIGA_PROXY_PORT}:80
     volumes:
@@ -116,6 +127,14 @@ services:
       - TAIGA_FRONT_HOST=project-frontend
       - EVENTS_HOST=project-events
       - ENABLE_SSL=no
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=proxy-network"
+      - "traefik.http.routers.project.service=project"
+      - "traefik.http.routers.project.rule=Host(`project.${YOUR_DOMAIN}`)"
+      - "traefik.http.routers.project.entrypoints=websecure"
+      - "traefik.http.routers.project.tls.certresolver=proxyresolver"
+      - "traefik.http.services.project.loadbalancer.server.port=80"
 
 
 networks:
@@ -123,25 +142,28 @@ networks:
     project-network:
       driver: bridge
 
+    proxy-network:
+      external: true
+
 
 volumes:
 
   project-backend-conf:
     driver_opts:
       type: none
-      device: ${TAIGA_BACK_CONF}
+      device: ${TAIGA_BACKEND_CONF}
       o: bind
 
   project-backend-media:
     driver_opts:
       type: none
-      device: ${TAIGA_BACK_MEDIA}
+      device: ${TAIGA_BACKEND_MEDIA}
       o: bind
 
   project-frontend-conf:
     driver_opts:
       type: none
-      device: ${TAIGA_FRONT_CONF}
+      device: ${TAIGA_FRONTEND_CONF}
       o: bind
 
   project-posgresql-db:
